--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,8 @@
 $body-height: 1110px;
+$content-width: 575px;
 $header-height: 287px;
+$footer-height: 43px;
 $line-color: #a292b3;
 $font-color: #9374b5;
 $content-gray-color: #999999;
+$footer-color: #e6e6e6;
