--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -1,10 +1,9 @@
 .content {
-  width: 575px;
-  height: $body-height - $header-height;
+  width: $content-width;
+  height: $body-height - $header-height - $footer-height;
   margin: 0 auto;
   position: relative;
   left: 3px;
-  border: 1px solid black;
 
   .content-menu {
     width: 100%;
@@ -33,24 +32,97 @@
     height: 274px;
   }
 
-  .content-description {
+  .content-quote {
     width: 98%;
     height: 76px;
     border-top: 1px solid #999999;
     border-bottom: 1px solid #999999;
-    margin: 22px auto;
+    margin: 22px 0 6px 0px;
     font-style: italic;
     font-size: 13px;
     color: #999999;
     text-align: center;
     padding-top: 5px;
     line-height: 20.3px;
-    letter-spacing: 0.08px;
+    letter-spacing: -0.06px;
     
     span {
       color: $font-color;
       font-weight: bold;
      }
+  }
+
+  .content-description {
+    width: 100%;
+    height: 200px;
+    position: relative;
+    // border: 1px solid black;
+
+    img {
+      width: 177px;
+      height: 177px;
+      margin-left: 12px;
+      margin-top: 2px;
+    }
+    h4 {
+      color: black;
+      margin: 14px 16px 10px 19px;
+      letter-spacing: 0.2px;
+    }
+    div p {
+      font-size: 8px;
+      color: $content-gray-color;
+      line-height: 15.6px;
+      padding-left: 21px;
+      padding-right: 12px;
+      margin: 0;
+    }
+
+    .read-more {
+      width: 57px;
+      height: 10px;
+      position: absolute;
+      right: -4px;
+      bottom: 9px;
+      font-size: 7px;
+      color: $content-gray-color;
+      padding:0;
+      border: none;
+      background-color: transparent;
+      font-style: italic;
+    }
+  }
+
+  .content-example {
+    width: 100%;
+    height: 127px;
+    // border: 1px solid black;
+
+    .content-example-header {
+      color: black;
+      font-size: 12px;
+      margin: 16px 0 0 0;
+      letter-spacing: 0.12px;
+      position: relative;
+
+      span {
+        font-weight: bold;
+      }
+
+      &:after {
+        width: 390px;
+        height: 2px;
+        background-color: $line-color;
+        content: ' ';
+        position: absolute;
+        top: 50%;
+        right: 0px;
+      }
+    }
+
+    img {
+      margin: 20px 0px 0px -2px;
+    }
   }
 
 }
