--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,7 @@ body {
   color: #9374b5;
 }
 
-.flex-container, .flex-container-center, header {
+.flex-container, .flex-container-center, header, footer .footer-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -50,11 +50,10 @@ header .header-text {
 
 .content {
   width: 575px;
-  height: 823px;
+  height: 780px;
   margin: 0 auto;
   position: relative;
   left: 3px;
-  border: 1px solid black;
 }
 
 .content .content-menu {
@@ -88,23 +87,121 @@ header .header-text {
   height: 274px;
 }
 
-.content .content-description {
+.content .content-quote {
   width: 98%;
   height: 76px;
   border-top: 1px solid #999999;
   border-bottom: 1px solid #999999;
-  margin: 22px auto;
+  margin: 22px 0 6px 0px;
   font-style: italic;
   font-size: 13px;
   color: #999999;
   text-align: center;
   padding-top: 5px;
   line-height: 20.3px;
-  letter-spacing: 0.08px;
+  letter-spacing: -0.06px;
 }
 
-.content .content-description span {
+.content .content-quote span {
   color: #9374b5;
   font-weight: bold;
+}
+
+.content .content-description {
+  width: 100%;
+  height: 200px;
+  position: relative;
+}
+
+.content .content-description img {
+  width: 177px;
+  height: 177px;
+  margin-left: 12px;
+  margin-top: 2px;
+}
+
+.content .content-description h4 {
+  color: black;
+  margin: 14px 16px 10px 19px;
+  letter-spacing: 0.2px;
+}
+
+.content .content-description div p {
+  font-size: 8px;
+  color: #999999;
+  line-height: 15.6px;
+  padding-left: 21px;
+  padding-right: 12px;
+  margin: 0;
+}
+
+.content .content-description .read-more {
+  width: 57px;
+  height: 10px;
+  position: absolute;
+  right: -4px;
+  bottom: 9px;
+  font-size: 7px;
+  color: #999999;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  font-style: italic;
+}
+
+.content .content-example {
+  width: 100%;
+  height: 127px;
+}
+
+.content .content-example .content-example-header {
+  color: black;
+  font-size: 12px;
+  margin: 16px 0 0 0;
+  letter-spacing: 0.12px;
+  position: relative;
+}
+
+.content .content-example .content-example-header span {
+  font-weight: bold;
+}
+
+.content .content-example .content-example-header:after {
+  width: 390px;
+  height: 2px;
+  background-color: #a292b3;
+  content: ' ';
+  position: absolute;
+  top: 50%;
+  right: 0px;
+}
+
+.content .content-example img {
+  margin: 20px 0px 0px -2px;
+}
+
+footer {
+  border-bottom: 3px solid #a292b3;
+  width: 100%;
+  height: 43px;
+  background-color: #e6e6e6;
+  font-size: 10px;
+  color: #9374b5;
+}
+
+footer .footer-content {
+  height: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 575px;
+  margin: 0 auto;
+}
+
+footer .footer-content .social button {
+  font-size: 13px;
+  border: none;
+  background-color: transparent;
+  color: #9374b5;
 }
 /*# sourceMappingURL=main.css.map */
